--- a/src/main/webapp/inspinia/form_basic.html
+++ b/src/main/webapp/inspinia/form_basic.html
@@ -679,7 +679,9 @@
                                 <div class="hr-line-dashed"></div>
                                 <div class="form-group"><label class="col-sm-2 control-label">Select</label>
 
-                                    <div class="col-sm-10"><select class="form-control m-b" name="account">
+                                    <div class="col-sm-10">
+                                    
+                                    <select class="form-control m-b" name="account">
                                         <option>option 1</option>
                                         <option>option 2</option>
                                         <option>option 3</option>
